<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P0141</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">add</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="copy">copy</string>
    <string name="paste">paste</string>
    <string name="exit">exit</string>

</resources>
