<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add"
        android:title="@string/add" />

    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit" />

    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="3"
        android:title="@string/delete" />

    <group android:id="@+id/group1" >
        <item
            android:id="@+id/menu_copy"
            android:orderInCategory="1"
            android:title="@string/copy" />

        <item
            android:id="@+id/menu_paste"
            android:orderInCategory="2"
            android:title="@string/paste" />

        <item
            android:id="@+id/menu_exit"
            android:orderInCategory="4"
            android:title="@string/exit" />
    </group>

</menu>